Changes functions and code to english

--- a/javascript-front/Ejemplo3/index.html
+++ b/javascript-front/Ejemplo3/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-  <script src='app.js'></script>
-  <button onclick="alerta();">Botón</button>
+    <script src='app.js'></script>
+    <button onclick="functionAlert();">Botón</button>
 </body>
 
 </html>
