--- a/javascript-front/Ejemplo4/index.html
+++ b/javascript-front/Ejemplo4/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <button onclick="saluda()">Saluda!</button>
+    <button onclick="greetings()">Saluda!</button>
     <div id='content'></div>
     <script src='app.js'></script>
 </body>
