--- a/javascript-front/Ejemplo8/index.html
+++ b/javascript-front/Ejemplo8/index.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-    <button onclick='rojo()'>Rojo</button>
-    <button onclick='negrita()'>Negrita</button>
-    <button onclick='cursiva()'>Cursiva</button>
-    
+    <button onclick='red()'>Rojo</button>
+    <button onclick='bold()'>Negrita</button>
+    <button onclick='italic()'>Cursiva</button>
+
     <div id='content'>Hola Mundo!</div>
     <script src='app.js'></script>
 </body>
