--- a/javascript-front/Ejercicio3/index.html
+++ b/javascript-front/Ejercicio3/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <button onclick='mostrarOcultar()'>Mostrar/Ocultar</button>
+    <button onclick='showHide()'>Mostrar/Ocultar</button>
     <div id='content'>Hola Mundo!</div>
     <script src='app.js'></script>
 </body>
