--- a/javascript-front/Ejercicio6/index.html
+++ b/javascript-front/Ejercicio6/index.html
@@ -1,13 +1,18 @@
 <html>
 
+<head>
+    <meta charset="UTF-8">
+</head>
+
 <body>
     <h1>Librería</h1>
 
     <div>
-        <p>Título: <input id='titulo' type='text'></p>
-        <p>Autor: <input id='autor' type='text'></p>
-        <p>Año: <input id='año' type='text'></p>
-        <button onclick="nuevoLibro()">Nuevo Libro</button>
+        <p>Título: <input id='title' type='text'></p>
+        <p>Autor: <input id='author' type='text'></p>
+        <p>Año: <input id='year' type='text'></p>
+
+        <button onclick="newBook()">Nuevo Libro</button>
     </div>
 
     <div id='content'></div>
