--- a/javascript-front/Ejemplo10/index.html
+++ b/javascript-front/Ejemplo10/index.html
@@ -3,11 +3,11 @@
 <body>
     <div>
         Nombre:
-        <input id='nombre' type='text'></input>
-        <button onclick='saluda()'>Saluda</button>
+        <input id='name' type='text'></input>
+        <button onclick='greetings()'>Saluda</button>
     </div>
     <div id='content'></div>
-    
+
     <script src='app.js'></script>
 </body>
 
