--- a/javascript-front/Ejercicio7/index.html
+++ b/javascript-front/Ejercicio7/index.html
@@ -1,11 +1,15 @@
 <html>
 
+<head>
+    <meta charset="UTF-8">
+</head>
+
 <body>
 
     <h1>Librería FW</h1>
 
     <div id='content'></div>
-    
+
     <script src='app.js'></script>
 </body>
 
